fix secondary flags being weirdly positions (or stretched) when they aren't 4:3

--- a/static2/css/statsviewer.css
+++ b/static2/css/statsviewer.css
@@ -35,6 +35,21 @@
     font-variant: small-caps;
 }
 
+#player-name {
+    display: flex;
+    justify-content: center;
+}
+
+#player-name span:first-child {
+    background-position: 100%;
+    flex-grow: 2;
+}
+
+#player-name span:last-child {
+    background-position: 0%;
+    flex-grow: 2;
+}
+
 /*
  Flag styles, taken from https://github.com/lipis/flag-icon-css
  */
